--- a/DockerFile-Prod
+++ b/DockerFile-Prod
@@ -7,5 +7,9 @@ COPY ./src/package.json /var/www
 
 RUN npm install
 
+COPY ./src/ /var/www
+
+RUN npm run build
+
 EXPOSE 3001
-CMD [ "npm", "start" ]
+CMD [ "npm", "run", "serve" ]
