--- a/DockerFile-Prod
+++ b/DockerFile-Prod
@@ -5,11 +5,14 @@ WORKDIR /var/www
 # Install app dependencies
 COPY ./src/package.json /var/www
 
-RUN npm install
+RUN npm install --production
 
 COPY ./src/ /var/www
 
 RUN npm run build
+
+RUN rm -r routes services models auth
+RUN rm connectionString.js server.js startMessage.js testSetup.js index.html
 
 EXPOSE 3001
 CMD [ "npm", "run", "serve" ]
