--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "Restaurant security api",
   "scripts": {
-    "babel-version": "babel --version",
     "prestart": "babel-node startMessage.js",
     "start": "nodemon server.js --exec babel-node",
     "build": "babel . -d dist --copy-files --ignore node_modules,dist,package.json",
@@ -12,21 +11,21 @@
   "author": "Marvin Andia",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
+    "colors": "^1.1.2",
     "nodemon": "^1.11.0"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
-    "colors": "^1.1.2",
     "express": "^4.15.2",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.8.6",
     "open": "0.0.5",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport-jwt": "^2.2.1",
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0"
   },
   "repository": {
     "type": "git",
