--- a/src/package.json
+++ b/src/package.json
@@ -15,17 +15,18 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jwt-simple": "^0.5.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.8.6",
     "open": "0.0.5",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1",
-    "babel-cli": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0"
+    "passport-jwt": "^2.2.1"
   },
   "repository": {
     "type": "git",
