--- a/src/package.json
+++ b/src/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "prestart": "babel-node startMessage.js",
     "start": "nodemon server.js --exec babel-node",
+    "test": "node_modules/.bin/babel-tape-runner test/*.js",
     "build": "babel . -d dist --copy-files --ignore node_modules,dist,package.json",
     "serve": "node dist/server.js"
   },
   "author": "Marvin Andia",
   "license": "ISC",
   "devDependencies": {
+    "babel-tape-runner": "^2.0.1",
     "colors": "^1.1.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "proxyquire": "^1.8.0",
+    "tape": "^4.7.0"
   },
   "dependencies": {
     "babel-cli": "^6.23.0",
