--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "colors": "^1.1.2",
     "nodemon": "^1.11.0",
     "proxyquire": "^1.8.0",
+    "supertest": "^3.0.0",
     "tape": "^4.7.0"
   },
   "dependencies": {
