--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "securityApi",
+  "name": "security-api",
   "version": "1.0.0",
   "description": "Restaurant security api",
   "scripts": {
