--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "Marvin Andia",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-tape-runner": "^2.0.1",
     "colors": "^1.1.2",
     "faucet": "0.0.1",
@@ -21,9 +24,6 @@
     "tape": "^4.7.0"
   },
   "dependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
