--- a/package.json
+++ b/package.json
@@ -6,22 +6,28 @@
     "prestart": "babel-node src/startMessage.js",
     "start": "nodemon src/server.js --exec babel-node",
     "test": "babel-tape-runner src/test/*.js | faucet",
-    "build": "babel src -d dist --copy-files",
-    "serve": "node dist/server.js"
+    "build-dev": "babel src -d build --copy-files",
+    "build": "webpack",
+    "serve": "node securityApp.js"
   },
   "author": "Marvin Andia",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-tape-runner": "^2.0.1",
-    "colors": "^1.1.2",
+    "copy-webpack-plugin": "^4.5.2",
     "faucet": "0.0.1",
     "nodemon": "^1.11.0",
     "proxyquire": "^1.8.0",
     "supertest": "^3.0.0",
-    "tape": "^4.7.0"
+    "tape": "^4.7.0",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
@@ -32,7 +38,8 @@
     "mongoose": "^5.2.3",
     "open": "0.0.5",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport-jwt": "^2.2.1",
+    "colors": "^1.1.2"
   },
   "repository": {
     "type": "git",
