--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-tape-runner": "^2.0.1",
     "copy-webpack-plugin": "^4.5.2",
+    "eslint": "^5.1.0",
+    "eslint-loader": "^2.0.0",
     "faucet": "0.0.1",
     "nodemon": "^1.11.0",
     "proxyquire": "^1.8.0",
