using debug module instead of console.log

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.exclude": {
         "node_modules/": true
-    }
+    },
+    "eslint.enable": true,
+    "eslint.provideLintTask": true
 }
