--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "colors": "^1.1.2",
+    "debug": "^3.1.0",
     "express": "^4.15.2",
     "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
     "mongoose": "^5.2.3",
     "open": "0.0.5",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1",
-    "colors": "^1.1.2"
+    "passport-jwt": "^2.2.1"
   },
   "repository": {
     "type": "git",
