--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-tape-runner": "^2.0.1",
     "copy-webpack-plugin": "^4.5.2",
-    "eslint": "^5.1.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
     "faucet": "0.0.1",
     "nodemon": "^1.11.0",
     "proxyquire": "^1.8.0",
