--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "faucet": "0.0.1",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.18.3",
     "proxyquire": "^1.8.0",
     "supertest": "^3.0.0",
-    "tape": "^4.7.0",
+    "tape": "^4.9.1",
+    "tape-promise": "^3.0.0",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-node-externals": "^1.7.2"
@@ -43,9 +44,8 @@
     "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
     "mongoose": "^5.2.3",
-    "open": "0.0.5",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   },
   "repository": {
     "type": "git",
