--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prestart": "babel-node src/startMessage.js",
     "start": "nodemon src/server.js --exec babel-node",
-    "test": "babel-tape-runner src/test/*.js | faucet",
+    "test": "babel-tape-runner src/**/*.test.js | faucet",
     "build-dev": "babel src -d build --copy-files",
     "build": "webpack",
     "serve": "node securityApp.js"
@@ -28,6 +28,7 @@
     "faucet": "0.0.1",
     "nodemon": "^1.18.3",
     "proxyquire": "^1.8.0",
+    "sinon": "^6.1.3",
     "supertest": "^3.0.0",
     "tape": "^4.9.1",
     "tape-promise": "^3.0.0",
