--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "eslint.enable": true,
     "eslint.provideLintTask": true,
     "editor.tabSize": 2,
-    "eslint.autoFixOnSave": true
+    "eslint.autoFixOnSave": true,
+    "files.associations": {"Dockerfile*": "dockerfile"}
 }
