--- a/DockerFile-Prod
+++ b/DockerFile-Prod
@@ -9,6 +9,9 @@ RUN npm install --production
 
 COPY ./dist/securityApp.js .
 
+# this will be overrided by kubernetes configmap
+COPY ./dist/config ./config
+
 ENV DEBUG=app:*
 
 EXPOSE 3001
