--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "colors": "^1.1.2",
+    "config": "^2.0.1",
     "debug": "^3.1.0",
     "express": "^4.15.2",
     "jwt-simple": "^0.5.1",
