--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "prestart": "babel-node src/startMessage.js",
     "start": "nodemon src/server.js --exec babel-node",
-    "test": "mkdirp report/test -p && babel-tape-runner src/**/*.test.js | tee report/test/test.out.tap | faucet",
+    "test": "mkdirp report/test -p && cross-env NODE_CONFIG_DIR=./src/config babel-tape-runner src/**/*.test.js | tee report/test/test.out.tap | faucet",
     "build-dev": "babel src -d build --copy-files",
     "build": "webpack",
     "serve": "node securityApp.js",
-    "debug": "babel-node --nolazy --inspect-brk=9229 src/routes/tokenRoutes.test.js"
+    "debug": "babel-node --nolazy --inspect-brk=9229 src/services/tokenService.test.js"
   },
   "author": "Marvin Andia",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-tape-runner": "^2.0.1",
     "copy-webpack-plugin": "^4.5.2",
+    "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-loader": "^2.0.0",
