--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "moment": "^2.18.1",
     "mongoose": "^5.2.3",
     "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "prom-client": "^11.2.1"
   },
   "repository": {
     "type": "git",
