--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prestart": "babel-node src/startMessage.js",
     "start": "nodemon src/server.js --exec babel-node",
-    "test": "mkdirp report/test -p && cross-env NODE_CONFIG_DIR=./src/config babel-tape-runner src/**/*.test.js | tee report/test/test.out.tap | faucet",
+    "test": "mkdirp report/test -p && cross-env NODE_CONFIG_DIR=./src/config SECURITY_ACCESS_TOKEN_SECRET=abc SECURITY_REFRESH_TOKEN_SECRET=abc babel-tape-runner src/**/*.test.js | tee report/test/test.out.tap | faucet",
     "build-dev": "babel src -d build --copy-files",
     "build": "webpack",
     "serve": "node securityApp.js",
@@ -40,12 +40,14 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.3.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "colors": "^1.1.2",
     "config": "^2.0.1",
     "debug": "^3.1.0",
     "express": "^4.15.2",
+    "grpc": "^1.17.0",
     "jwt-simple": "^0.5.1",
     "moment": "^2.18.1",
     "mongoose": "^5.2.3",
