--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Marvin Andia",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.26",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -24,36 +27,36 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
     "faucet": "0.0.1",
     "mkdirp": "^0.5.1",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.11",
     "proxyquire": "^1.8.0",
     "sinon": "^6.1.3",
     "supertest": "^3.0.0",
-    "tape": "^4.9.1",
+    "tape": "^4.10.1",
     "tape-promise": "^3.0.0",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@grpc/proto-loader": "^0.3.0",
-    "bluebird": "^3.5.0",
-    "body-parser": "^1.17.1",
-    "colors": "^1.1.2",
+    "bluebird": "^3.5.4",
+    "body-parser": "^1.18.3",
+    "colors": "^1.3.3",
     "config": "^2.0.1",
     "debug": "^3.1.0",
-    "express": "^4.15.2",
-    "grpc": "^1.17.0",
-    "jwt-simple": "^0.5.1",
-    "moment": "^2.18.1",
-    "mongoose": "^5.2.3",
+    "express": "^4.16.4",
+    "grpc": "^1.19.0",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.24.0",
+    "mongoose": "^5.4.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "prom-client": "^11.2.1"
+    "prom-client": "^11.3.0"
   },
   "repository": {
     "type": "git",
