--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,8 +3,8 @@
         "node_modules/": true
     },
     "eslint.enable": true,
-    "eslint.provideLintTask": true,
+	"eslint.lintTask.enable": true,
     "editor.tabSize": 2,
     "eslint.autoFixOnSave": true,
-    "files.associations": {"Dockerfile*": "dockerfile"}
+    "files.associations": {"Dockerfile*": "dockerfile", "Jenkinsfile*":"groovy"}
 }
