--- a/k8s/02-security-secret.yaml
+++ b/k8s/02-security-secret.yaml
@@ -9,5 +9,5 @@ type: Opaque
 stringData:
   dbUserName: "security_user"
   dbPassword: "1234"
-  dbAccessTokenSecret: "test"
-  dbRefreshTokenSecret: "test"
+  dbAccessTokenSecret: "Th1s1sth3endBeatuf@friend18237_+as"
+  dbRefreshTokenSecret: "Th1s1sth3endBeatuf@friend121234_xcvf%"
