--- a/k8s/04-service-deployment.yaml
+++ b/k8s/04-service-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: security-app
   namespace: default
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: security
   ports:
