upgrade to babel 7, ts support

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Restaurant security api",
   "scripts": {
     "prestart": "babel-node src/startMessage.js",
-    "start": "nodemon src/server.js --exec babel-node",
+    "start": "nodemon src/server.js --exec babel-node -r dotenv/config",
     "test": "mkdirp report/test -p && cross-env NODE_CONFIG_DIR=./src/config SECURITY_ACCESS_TOKEN_SECRET=abc SECURITY_REFRESH_TOKEN_SECRET=abc babel-tape-runner src/**/*.test.js | tee report/test/test.out.tap | faucet",
     "build-dev": "babel src -d build --copy-files",
     "build": "webpack",
@@ -15,51 +15,65 @@
   "author": "Marvin Andia",
   "license": "ISC",
   "devDependencies": {
-    "@types/body-parser": "^1.17.0",
-    "@types/express": "^4.16.1",
-    "@types/mongoose": "^5.3.26",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-tape-runner": "^2.0.1",
-    "copy-webpack-plugin": "^4.5.2",
-    "cross-env": "^5.2.0",
+    "@babel/cli": "^7.7.7",
+    "@babel/core": "^7.7.7",
+    "@babel/node": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-typescript": "^7.7.7",
+    "@types/body-parser": "^1.17.1",
+    "@types/config": "0.0.36",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.39",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-tape-runner": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.19.1",
     "faucet": "0.0.1",
     "migrate-mongo": "^7.0.1",
     "mkdirp": "^0.5.1",
-    "nodemon": "^1.18.11",
+    "nodemon": "^2.0.2",
     "proxyquire": "^1.8.0",
     "sinon": "^6.1.3",
     "supertest": "^3.0.0",
-    "tape": "^4.10.1",
+    "tape": "^4.13.0",
     "tape-promise": "^3.0.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
+    "typescript": "^3.7.4",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
-    "@grpc/proto-loader": "^0.3.0",
-    "bluebird": "^3.5.4",
-    "body-parser": "^1.18.3",
-    "colors": "^1.3.3",
-    "config": "^2.0.1",
-    "debug": "^3.1.0",
-    "express": "^4.16.4",
-    "grpc": "^1.19.0",
+    "@babel/polyfill": "^7.7.0",
+    "@grpc/proto-loader": "^0.5.3",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "config": "^3.2.4",
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "grpc": "^1.24.2",
     "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
-    "mongoose": "^5.4.6",
-    "passport": "^0.4.0",
+    "mongoose": "^5.8.5",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "prom-client": "^11.3.0"
+    "prom-client": "^11.5.3"
   },
   "repository": {
     "type": "git",
