manage db deployments

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-ADMIN_DB_USER=marvin
+ADMIN_DB_USER=matt
 ADMIN_DB_PASSWORD=1234
 NODE_CONFIG_DIR=./src/config
+SECURITY_DB_HOST=security-db
 SECURITY_DB_USER=security_user
 SECURITY_DB_PASSWORD=1234
 SECURITY_ACCESS_TOKEN_SECRET=Th1s1sth3endBeatuf@frieND823762873
