--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,15 @@
     "eslint.enable": true,
 	"eslint.lintTask.enable": true,
     "editor.tabSize": 2,
-    "eslint.autoFixOnSave": true,
     "files.associations": {
         "Dockerfile*": "dockerfile",
         "Jenkinsfile*": "groovy"
     },
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
-    }
+    },
+	"eslint.validate": [
+		"javascript",
+        "typescript"
+	]
 }
