--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "esnext",
 		// Process & infer types from .js files.
 		"allowJs": true,
-		"checkJs": false,
+		// "checkJs": false,
 		// Don't emit; allow Babel to transform files.
 		"noEmit": true,
 		// Enable strictest settings like strictNullChecks & noImplicitAny.
