--- a/k8s/02-service-deployment.yaml
+++ b/k8s/02-service-deployment.yaml
@@ -26,8 +26,8 @@ spec:
     metadata:
       labels:
         app: security
-      annotations:
-        sidecar.istio.io/inject: "false"
+      # annotations:
+      #   sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: res-security
