--- a/k8s/db/04-security-db-statefulset.yaml
+++ b/k8s/db/04-security-db-statefulset.yaml
@@ -13,8 +13,8 @@ spec:
     metadata:
       labels:
         app: security-db
-      annotations:
-        sidecar.istio.io/inject: "false"
+      # annotations:
+      #   sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: res-security-db
