--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Restaurant security api",
   "scripts": {
     "prestart": "babel-node src/startMessage.js",
-    "start": "nodemon src/server.js --exec babel-node -r dotenv/config",
+    "start": "nodemon src/server.js --exec babel-node -r dotenv/config --extensions \".ts,.js\"",
     "test": "mkdirp report/test -p && cross-env NODE_CONFIG_DIR=./src/config SECURITY_ACCESS_TOKEN_SECRET=abc SECURITY_REFRESH_TOKEN_SECRET=abc babel-tape-runner src/**/*.test.js | tee report/test/test.out.tap | faucet",
     "build-dev": "babel src -d build --copy-files",
     "build": "webpack",
     "serve": "node securityApp.js",
     "debug": "babel-node --nolazy --inspect-brk=9229 src/services/tokenService.test.js",
-		"migrate-dev": "cross-env NODE_ENV=development npm run migrate",
-		"migrate-status-dev": "cross-env NODE_ENV=development npm run migrate-status",
-		"migrate": "migrate-mongo up",
-		"migrate-status": "migrate-mongo status"
+    "migrate-dev": "cross-env NODE_ENV=development npm run migrate",
+    "migrate-status-dev": "cross-env NODE_ENV=development npm run migrate-status",
+    "migrate": "migrate-mongo up",
+    "migrate-status": "migrate-mongo status"
   },
   "author": "Marvin Andia",
   "license": "ISC",
@@ -33,6 +33,7 @@
     "@types/config": "0.0.36",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
+    "@types/jaeger-client": "^3.15.3",
     "@types/mongoose": "^5.5.39",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
@@ -71,9 +72,11 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "grpc": "^1.24.2",
+    "jaeger-client": "^3.17.2",
     "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
     "mongoose": "^5.8.5",
+    "opentracing": "^0.14.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "prom-client": "^11.5.3"
