using typescript grpc client

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "migrate-dev": "cross-env NODE_ENV=development npm run migrate",
     "migrate-status-dev": "cross-env NODE_ENV=development npm run migrate-status",
     "migrate": "migrate-mongo up",
-    "migrate-status": "migrate-mongo status"
+    "migrate-status": "migrate-mongo status",
+    "proto-ts": "bash proto-to-ts.sh",
+    "check-types": "tsc"
   },
   "author": "Marvin Andia",
   "license": "ISC",
@@ -33,6 +35,7 @@
     "@types/config": "0.0.36",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.2",
+    "@types/google-protobuf": "^3.7.2",
     "@types/jaeger-client": "^3.15.3",
     "@types/mongoose": "^5.5.39",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
@@ -48,6 +51,8 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.19.1",
     "faucet": "0.0.1",
+    "grpc-tools": "^1.8.1",
+    "grpc_tools_node_protoc_ts": "^2.5.10",
     "migrate-mongo": "^7.0.1",
     "mkdirp": "^0.5.1",
     "nodemon": "^2.0.2",
@@ -56,6 +61,7 @@
     "supertest": "^3.0.0",
     "tape": "^4.13.0",
     "tape-promise": "^3.0.0",
+    "ts-protoc-gen": "^0.12.0",
     "typescript": "^3.7.4",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
@@ -63,13 +69,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
-    "@grpc/proto-loader": "^0.5.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "config": "^3.2.4",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "google-protobuf": "^3.11.3",
     "grpc": "^1.24.2",
     "jaeger-client": "^3.17.2",
     "jwt-simple": "^0.5.6",
