istio changes, updated certs

--- a/k8s/03-routing.yaml
+++ b/k8s/03-routing.yaml
@@ -1,7 +1,7 @@
-apiVersion: getambassador.io/v1
-kind: Mapping
-metadata:
-  name: security-app
-spec:
-  prefix: /securityApi/
-  service: security-app:3001
+# apiVersion: getambassador.io/v1
+# kind: Mapping
+# metadata:
+#   name: security-app
+# spec:
+#   prefix: /securityApi/
+#   service: security-app:3001
