--- a/k8s/02-service-deployment.yaml
+++ b/k8s/02-service-deployment.yaml
@@ -3,12 +3,16 @@ apiVersion: v1
 metadata:
   name: security-app
   namespace: default
+  labels:
+    app: security
+    service: security-app
 spec:
   type: ClusterIP
   selector:
     app: security
   ports:
-  - protocol: TCP
+  - name: http-security-app
+    protocol: TCP
     port: 3001
     targetPort: 3001
 ---
@@ -16,7 +20,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: default
-  name: security-app
+  name: security-app-v1
+  labels:
+    app: security
+    version: v1
 spec:
   selector:
     matchLabels:
@@ -26,8 +33,9 @@ spec:
     metadata:
       labels:
         app: security
-      annotations:
-        sidecar.istio.io/inject: "false"
+        version: v1
+      # annotations:
+      #   sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: res-security
