--- a/k8s/02-service-deployment.yaml
+++ b/k8s/02-service-deployment.yaml
@@ -37,6 +37,7 @@ spec:
       # annotations:
       #   sidecar.istio.io/inject: "false"
     spec:
+      # serviceAccountName: security-db-v1
       containers:
       - name: res-security
         image: security-app
