--- a/k8s/db/03-security-db-service.yaml
+++ b/k8s/db/03-security-db-service.yaml
@@ -6,9 +6,11 @@ metadata:
   labels:
     app: security-db
 spec:
-  ports:
-  - name: tcp-security-db
-    port: 27017
+  clusterIP: None
   selector:
     app: security-db
-  clusterIP: None
+  ports:
+  - name: mongo
+    protocol: TCP
+    port: 27017
+    targetPort: 27017
