--- a/k8s/init/04-ambassador-service.yaml
+++ b/k8s/init/04-ambassador-service.yaml
@@ -6,7 +6,14 @@ spec:
   type: LoadBalancer
   externalTrafficPolicy: Local
   ports:
-   - port: 80
+   -
+     name: http
+     port: 80
+     protocol: TCP
      targetPort: 8080
+   - name: https
+     port: 443
+     protocol: TCP
+     targetPort: 8443
   selector:
     service: ambassador
