--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
     "opentracing": "^0.14.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "prom-client": "^11.5.3"
+    "prom-client": "^11.5.3",
+    "swagger-ui-express": "^4.1.4",
+    "yamljs": "^0.3.0"
   },
   "repository": {
     "type": "git",
