--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/google-protobuf": "^3.7.2",
     "@types/jaeger-client": "^3.15.3",
     "@types/mongoose": "^5.5.39",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/yamljs": "^0.2.30",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "babel-eslint": "^10.0.3",
