--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/google-protobuf": "^3.7.2",
     "@types/jaeger-client": "^3.15.3",
     "@types/mongoose": "^5.5.39",
+    "@types/redis": "^2.8.17",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yamljs": "^0.2.30",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
@@ -86,6 +87,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "prom-client": "^11.5.3",
+    "redis": "^3.0.2",
     "swagger-ui-express": "^4.1.4",
     "yamljs": "^0.3.0"
   },
