--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "prestart": "babel-node src/startMessage.js",
     "start": "nodemon src/server.js --exec babel-node -r dotenv/config --extensions \".ts,.js\"",
     "test": "mkdirp report/test -p && cross-env NODE_ENV=test NODE_CONFIG_DIR=./src/config SECURITY_ACCESS_TOKEN_SECRET=abc SECURITY_REFRESH_TOKEN_SECRET=abc babel-node --extensions '.js,.ts,.jsx,.tsx' runNodeTests.js src/**/*.test.js | tee report/test/test.out.tap | faucet && npm run tap-to-junit",
-    "tap-to-junit": "tap-junit -o report/test -n test.out.xml < report/test/test.out.tap",
+    "tap-to-junit": "tap-junit -o report/junit -n test.xml < report/test/test.out.tap",
     "build-dev": "babel src -d build --copy-files",
     "build": "webpack",
     "serve": "node securityApp.js",
