--- a/package.json
+++ b/package.json
@@ -22,29 +22,31 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.9.6",
     "@babel/node": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/plugin-proposal-throw-expressions": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
     "@types/body-parser": "^1.19.0",
     "@types/config": "0.0.36",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
+    "@types/express-serve-static-core": "^4.17.7",
     "@types/google-protobuf": "^3.7.2",
-    "@types/jaeger-client": "^3.15.3",
-    "@types/mongoose": "^5.7.11",
-    "@types/redis": "^2.8.17",
+    "@types/jaeger-client": "^3.15.4",
+    "@types/mongoose": "^5.7.21",
+    "@types/qs": "^6.9.3",
+    "@types/redis": "^2.8.21",
     "@types/swagger-ui-express": "^4.1.2",
-    "@types/yamljs": "^0.2.30",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.0",
+    "@types/yamljs": "^0.2.31",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "copy-webpack-plugin": "^5.1.1",
@@ -56,37 +58,37 @@
     "eslint-loader": "^3.0.4",
     "eslint-plugin-import": "^2.20.2",
     "faucet": "0.0.1",
-    "grpc-tools": "^1.8.1",
+    "grpc-tools": "^1.9.0",
     "grpc_tools_node_protoc_ts": "^2.5.11",
-    "migrate-mongo": "^7.1.0",
+    "migrate-mongo": "^7.2.1",
     "mkdirp": "^0.5.5",
-    "nodemon": "^2.0.3",
+    "nodemon": "^2.0.4",
     "proxyquire": "^1.8.0",
     "sinon": "^6.3.5",
     "supertest": "^3.4.2",
     "tap-junit": "^3.1.2",
     "tape": "^4.13.2",
     "tape-promise": "^4.0.0",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
+    "typescript": "^3.9.3",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
-    "@babel/runtime": "^7.9.2",
+    "@babel/runtime": "^7.9.6",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "config": "^3.3.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "google-protobuf": "^3.11.4",
+    "google-protobuf": "^3.12.1",
     "grpc": "^1.24.2",
-    "jaeger-client": "^3.17.2",
+    "jaeger-client": "^3.18.0",
     "jwt-simple": "^0.5.6",
-    "moment": "^2.24.0",
-    "mongoose": "^5.9.9",
+    "moment": "^2.26.0",
+    "mongoose": "^5.9.15",
     "opentracing": "^0.14.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
