--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build-dev": "babel src -d build --copy-files",
     "build": "webpack",
     "serve": "node securityApp.js",
-    "debug": "babel-node --nolazy --inspect-brk=9229 src/services/tokenService.test.js",
+    "debug": "babel-node -r dotenv/config --extensions \".ts,.js\" --nolazy --inspect-brk=9229 src/server.js",
     "migrate-dev": "cross-env NODE_ENV=development npm run migrate",
     "migrate-status-dev": "cross-env NODE_ENV=development npm run migrate-status",
     "migrate": "migrate-mongo up",
