--- a/appspec.yml
+++ b/appspec.yml
@@ -13,8 +13,10 @@ hooks:
   AfterInstall:
     - location: scripts/install_packages.sh
       timeout: 3500
+      runas: ec2-user
     - location: scripts/start_server.sh
       timeout: 300
+      runas: ec2-user
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 300
