--- a/appspec.yml
+++ b/appspec.yml
@@ -9,6 +9,11 @@ files:
     destination: /home/ec2-user/app/config
   - source: /protos
     destination: /home/ec2-user/app/protos
+permissions:
+  - object: /home/ec2-user/app
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
 hooks:
   AfterInstall:
     - location: scripts/install_packages.sh
