--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,8 @@ permissions:
     pattern: "app"
     owner: ec2-user
     group: ec2-user
+    type:
+      - directory
   - object: /home/ec2-user/app
     pattern: "**"
     owner: ec2-user
