--- a/appspec.yml
+++ b/appspec.yml
@@ -11,6 +11,8 @@ files:
     destination: /home/ec2-user/app/protos
   - source: /cert
     destination: /home/ec2-user/app/cert
+  - source: /swagger.yaml
+    destination: /home/ec2-user/app
 permissions:
   - object: /home/ec2-user
     pattern: "app"
