--- a/appspec.yml
+++ b/appspec.yml
@@ -13,6 +13,8 @@ files:
     destination: /home/ec2-user/app/cert
   - source: /swagger.yaml
     destination: /home/ec2-user/app
+  - source: /pm2.config.js
+    destination: /home/ec2-user/app
 permissions:
   - object: /home/ec2-user
     pattern: "app"
