--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "migrate": "migrate-mongo up",
     "migrate-status": "migrate-mongo status",
     "proto-ts": "bash proto-to-ts.sh",
-		"check-types": "tsc",
-		"stop": "pkill --signal SIGINT restaurant-security"
+    "check-types": "tsc",
+    "stop": "pkill --signal SIGINT restaurant-security"
   },
   "author": "Marvin Andia",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/node": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/node": "^7.17.10",
+    "@babel/plugin-proposal-class-properties": "^7.17.12",
+    "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.17.12",
+    "@babel/plugin-proposal-throw-expressions": "^7.16.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@types/body-parser": "^1.19.0",
     "@types/config": "0.0.36",
     "@types/debug": "^4.1.5",
@@ -46,21 +46,21 @@
     "@types/redis": "^2.8.21",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yamljs": "^0.2.31",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-loader": "^3.0.4",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "faucet": "0.0.1",
-    "grpc-tools": "^1.9.0",
     "grpc_tools_node_protoc_ts": "^2.5.11",
+    "grpc-tools": "^1.9.0",
     "migrate-mongo": "^7.2.1",
     "mkdirp": "^0.5.5",
     "nodemon": "^2.0.4",
@@ -70,10 +70,10 @@
     "tap-junit": "^3.1.2",
     "tape": "^4.13.2",
     "tape-promise": "^4.0.0",
-    "typescript": "^3.9.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^4.7.2",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
