--- a/package.json
+++ b/package.json
@@ -35,15 +35,15 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
     "@types/body-parser": "^1.19.2",
-    "@types/config": "0.0.36",
+    "@types/config": "^0.0.41",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/express-serve-static-core": "^4.17.28",
-    "@types/google-protobuf": "^3.7.2",
-    "@types/jaeger-client": "^3.15.4",
-    "@types/mongoose": "^5.7.21",
-    "@types/qs": "^6.9.3",
-    "@types/redis": "^2.8.21",
+    "@types/google-protobuf": "^3.15.6",
+    "@types/jaeger-client": "^3.18.3",
+    "@types/mongoose": "^5.11.97",
+    "@types/qs": "^6.9.7",
+    "@types/redis": "^4.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
@@ -51,19 +51,19 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^6.0.3",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.32.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
+    "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-webpack-plugin": "^3.1.1",
     "faucet": "0.0.1",
-    "grpc_tools_node_protoc_ts": "^2.5.11",
-    "grpc-tools": "^1.9.0",
-    "migrate-mongo": "^7.2.1",
-    "mkdirp": "^0.5.5",
-    "nodemon": "^2.0.4",
+    "grpc_tools_node_protoc_ts": "^5.3.2",
+    "grpc-tools": "^1.11.2",
+    "migrate-mongo": "^9.0.0",
+    "mkdirp": "^1.0.4",
+    "nodemon": "^2.0.16",
     "proxyquire": "^1.8.0",
     "sinon": "^6.3.5",
     "supertest": "^3.4.2",
@@ -84,17 +84,17 @@
     "config": "^3.3.7",
     "debug": "^4.3.4",
     "express": "^4.18.1",
-    "google-protobuf": "^3.12.1",
-    "grpc": "^1.24.2",
-    "jaeger-client": "^3.18.0",
+    "google-protobuf": "^3.20.1",
+    "grpc": "^1.24.11",
+    "jaeger-client": "^3.19.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.3",
-    "mongoose": "^5.9.15",
-    "opentracing": "^0.14.4",
-    "passport": "^0.4.1",
+    "mongoose": "^6.3.4",
+    "opentracing": "^0.14.7",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "prom-client": "^11.5.3",
-    "redis": "^3.0.2",
+    "prom-client": "^14.0.1",
+    "redis": "^4.1.0",
     "swagger-ui-express": "^4.4.0",
     "yamljs": "^0.3.0"
   },
