--- a/Dockerfile-db
+++ b/Dockerfile-db
@@ -1,12 +1,13 @@
-FROM node:8
+FROM node:alpine3.15
 
 WORKDIR /var/www
 
 # Install app dependencies
-COPY ./package*.json /var/www/
+COPY ./migrations.package.json /var/www/package.json
 
-RUN npm install migrate-mongo cross-env dotenv
+RUN npm install
 
-COPY . .
+COPY ./migrate-mongo-config.js ./.env ./
+COPY ./migrations ./migrations
 
 ENV DEBUG=app:* NODE_ENV=development NODE_CONFIG_DIR=./src/config
