--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
 ADMIN_DB_USER=matt
 ADMIN_DB_PASSWORD=1234
 NODE_CONFIG_DIR=./src/config
-SECURITY_DB_HOST=security-db
+SECURITY_DB_HOST=192.168.200.114
 SECURITY_DB_USER=security_user
 SECURITY_DB_PASSWORD=1234
 SECURITY_ACCESS_TOKEN_SECRET=Th1s1sth3endBeatuf@frieND823762873
 SECURITY_REFRESH_TOKEN_SECRET=NoOneTrustth1sh881%
 NODE_ENV=development
+AWS_ACCESS_KEY_ID=<INSERT KEY>
+AWS_SECRET_ACCESS_KEY=<INSERT SECRET>
+KMS_ID=<INSERT KMS ID>
