--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mkdirp report/test -p && cross-env NODE_ENV=test NODE_CONFIG_DIR=./src/config SECURITY_ACCESS_TOKEN_SECRET=abc SECURITY_REFRESH_TOKEN_SECRET=abc babel-node --extensions '.js,.ts,.jsx,.tsx' runNodeTests.js src/**/*.test.js | tee report/test/test.out.tap | faucet",
     "tap-to-junit": "tap-junit -o report/junit -n test.xml < report/test/test.out.tap",
     "build-dev": "babel src -d build --copy-files",
-    "build": "webpack",
+    "build": "webpack --color",
     "serve": "node securityApp.js",
     "debug": "babel-node -r dotenv/config --extensions \".ts,.js\" --nolazy --inspect-brk=9229 src/server.js",
     "migrate-dev": "cross-env NODE_ENV=development npm run migrate",
