--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,10 @@
 version: 0.2
 phases:
-  install:
-    runtime-versions:
-      nodejs: 16
-    commands:
-       - npm install
+  # install:
+  #   runtime-versions:
+  #     nodejs: 16
+  #   commands:
+  #      - npm install
   build:
     commands:
       - echo Build started on `date`
